Reorganize waybar right modules and fix spacing
- Move tray-expander to leftmost on right side
- Add CPU and update to expandable tray group
- Add margin-right to clock for spacing

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -66,6 +66,7 @@ tooltip {
 
 #clock {
   margin-left: 8.75px;
+  margin-right: 12px;
 }
 
 .hidden {
